# isweep

./: .gitignore  README.md  READMEtest.md  environment.yml  fixes.md  get-software.sh  inheritance-fit.ipynb  isafe-environment.yaml  isweep-environment.yml  pyproject.toml  sim.example.tsv  todo.md  usage.md
auxillary/bins/: example.bins
auxillary/ne/: increasing-1000G.ne  make-ne-files.ipynb
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  misc.rst  usage.rst  visualizing.rst
figures/: concat.summary.central.bottle.tsv  concat.summary.selcoef.bottle.tsv  concat.summary.three.phase.tsv  example-figures.py  plotting-simulate.ipynb
figures/data/: concat.summary.100k.tsv  concat.summary.25k.tsv  concat.summary.bottle.tsv
misc/: README.md  announcements.md  cluster-options.md  different-chromosome-rates.md  fixes.md  functions-package.md  installing-mamba.md  interpretting-pvalues.md  multiple-testing.md  recombination-rates.md  small-chromosomes.md  telomeres-centromeres.md  telomeres.md  usage.md
papers/: README.md
papers/methods-paper/: README.md  ibd-rate-by-selcoef.ipynb  isweep-imagene-clues.ipynb  isweep-versus-isafe.ipynb  simulated-data-tables.ipynb  some-supplementary-analyses.ipynb
pre-processing/: README.md  high-kinship.py  keep-one-family-member.py  list-intersect.py  meta-Rscript-downsample-ggplotPCA.py  meta-Rscript-ggplotPCA.py  meta-Rscript-plotPCA.py  run-ibdkin-231006.sh  run-ibdkin.sh  run-min-af.sh  vcf2gds.R
scripts/: README.md  add-uniform-err.py  concat-snakemake-experiments.py  count-ibd.py  estimate-norm.py  estimate-perc.py  excess-region.py  exclude-samples.py  filter-lines.py  haplotypes.py  ibd-gini-entropy.py  ibd-selscan-multtest.py  ibd-selscan-simtest.py  ibd-windowed.py  interpolate-map.py  make-histogram.py  make-roi-table.py  manhattan-pipeline.py  manhattan.py  multiple-testing-analytical.py  multiple-testing-simulation-pipeline.py  multiple-testing-simulation.py  outliers.py  plot-autocovariance.py  plot-histogram.py  plot-manhattan-pipeline.py  plot-manhattan.py  plot-sweep.py  rank.py  remove-phase.py  run-ibdne.sh  scan.py  setup-snakemake-experiment.py  significance.py  site.py  snp.py  summary-table.py  trim-telomere-map.py
src/: stdpopsim-catalog.ipynb  vignette.ipynb
vignettes/: constant-2k.ne  estimate-selcoef-example.ipynb  required-sample-size.ipynb  wright-fisher.ipynb
workflow/: README.md  afr.yaml  eur1.yaml  exclsamples.txt  exclude-samples.py  samples.txt  subsamples.txt
(+642 files in other folders)
