[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iSWEEP: incomplete Selective sweep With Extended haplotypes Estimation Procedure"
version = "0.0.1"
authors = [
  { name="Seth D. Temple", email="sdtemple@uw.edu" },
]
description = "Tools for selection estimation, coalescent modeling, and identity-by-descent analysis"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: CC0 1.0 Universal License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sdtemple/iSWEEP"
"Bug Tracker" = "https://github.com/sdtemple/iSWEEP/issues"
