[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isweep"
version = "0.1.2"
authors = [
  { name="Seth D. Temple", email="sdtemple@uw.edu" },
]
description = "Tools for selective sweep inference (and coalescent + identity-by-descent simulators)"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.21",
    "pandas",
    "scipy>=1.7",
    "networkx",
    "matplotlib",
    "seaborn",
    "msprime",
    "tskit",
    "pyslim",
    "stdpopsim",
    "snakemake",
    "tszip"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sdtemple/isweep"
"Bug Tracker" = "https://github.com/sdtemple/isweep/issues"
