[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isweep"
version = "1.0.7"
authors = [
  { name="Seth D. Temple", email="sethtem@umich.edu" },
]
description = "Methods for selective sweep inference"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "numpy>=1.21",
  "scipy>=1.7",
  "networkx",
  "pandas"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.sdist]
include = ["src", "docs"]

[project.urls]
"Homepage" = "https://github.com/sdtemple/isweep"
"Bug Tracker" = "https://github.com/sdtemple/isweep/issues"
